tests/integration/snapshots/integration__rename__command.snap
---
source: tests/integration/rename.rs
assertion_line: 57
expression: result
---
{
  "changes": {
    "[tmp]/bar.tex": [
      {
        "newText": "qux",
        "range": {
          "end": {
            "character": 4,
            "line": 0
          },
          "start": {
            "character": 1,
            "line": 0
          }
        }
      }
    ],
    "[tmp]/foo.tex": [
      {
        "newText": "qux",
        "range": {
          "end": {
            "character": 4,
            "line": 0
          },
          "start": {
            "character": 1,
            "line": 0
          }
        }
      }
    ]
  }
}
