tests/integration/snapshots/integration__rename__entry.snap
---
source: tests/integration/rename.rs
assertion_line: 99
expression: result
---
{
  "changes": {
    "[tmp]/main.bib": [
      {
        "newText": "qux",
        "range": {
          "end": {
            "character": 12,
            "line": 0
          },
          "start": {
            "character": 9,
            "line": 0
          }
        }
      }
    ],
    "[tmp]/main.tex": [
      {
        "newText": "qux",
        "range": {
          "end": {
            "character": 9,
            "line": 1
          },
          "start": {
            "character": 6,
            "line": 1
          }
        }
      }
    ]
  }
}
