tests/integration/snapshots/integration__rename__label.snap
---
source: tests/integration/rename.rs
assertion_line: 188
expression: result
---
{
  "changes": {
    "[tmp]/bar.tex": [
      {
        "newText": "bar",
        "range": {
          "end": {
            "character": 8,
            "line": 0
          },
          "start": {
            "character": 5,
            "line": 0
          }
        }
      }
    ],
    "[tmp]/foo.tex": [
      {
        "newText": "bar",
        "range": {
          "end": {
            "character": 10,
            "line": 0
          },
          "start": {
            "character": 7,
            "line": 0
          }
        }
      }
    ]
  }
}
